# LQPctrlCpp

./: AUTHORS.txt  CMakeLists.txt  LICENSE.txt
extra/: CMakeLists.txt
extra/copl_qp/: CMakeLists.txt  COPLQP.spc  Copyright  QPcnt.h  QPdef.h  QPfun.h  afiro.qps  example.qps  qpalloc.c  qpchol.c  qpdata.c  qpmain.c  qpmatrx.c  qporder.c  qpprepr.c  qpprint.c  qpproc.c  qpshut.c  qpsolv.c  qpsymbo.c  qpvect.c  qpxlist.c
extra/quadprog-1.1/: ._QuadProg++.hh  ._main.cc
extra/quadprog-1.2/: CMakeLists.txt
include/: Constraint.h  LQPctrl.h  Solver.h  Task.h  genericSolver.h
include/Solvers/: abstractSolver.h
src/: CMakeLists.txt  Constraint.cpp  LQPctrl.cpp  Solver.cpp  genericSolver.cpp
src/Solvers/: CMakeLists.txt  Solver_CGAL.cpp  Solver_COPL_QP.cpp  Solver_QuadProg.cpp  abstractSolver.cpp
src/test/: CMakeLists.txt  test_minimal.cpp  test_random.cpp  test_readFromArray.cpp  test_readFromFile.cpp
test/: CMakeLists.txt  p00_iCub.txt  p01_CEqIneq.txt  p02_CEq.txt  p03_CIneq.txt  p04_NonC.txt  test_Solvers.cpp  test_readFromFile.cpp  test_readFromFile_cvxopt.py
